[package]
name = "cpu_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3"
num_cpus = "1.13"
rand = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"

[lib]
name = "cpu_llm"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "train"
path = "src/hybrid_train.rs"
